src/objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>BST_ACCPROFILE_QUESTION_LOCALE__c</fullName>
        <description>Question Localized statement from Question Object</description>
        <formula>BST_Question__r.BST_QUESTION_LOCALE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Localised</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_ACCPROFILE_QUESTION_STATEMENT__c</fullName>
        <description>Question Statement from Question object</description>
        <formula>BST_Question__r.BST_QUESTION_STATEMENT__c</formula>
        <label>Question Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Account_Number__c</fullName>
        <formula>BST_Account__r.BST_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_CALCULATED_EXPIRATION__c</fullName>
        <description>Formula field calculates expiry of the response</description>
        <formula>LastModifiedDate + BST_Question__r.BST_RESPONSE_VALID_TIME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_EXPIRED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to capture the status of the response (expired or not).</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_Legacy_CRM_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy CRM Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Question__c</fullName>
        <description>This is a master detail relation with Question object.</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Account Profiles</relationshipLabel>
        <relationshipName>Account_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BST_Selected_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Profiles (Selected Account)</relationshipLabel>
        <relationshipName>Account_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_Selected_Answer__c</fullName>
        <label>Selected Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Selected_Date__c</fullName>
        <label>Selected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Selected_Multi_Answers__c</fullName>
        <label>Selected Multi Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_Selected_Number__c</fullName>
        <label>Selected Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Selected_Picklist_Answer__c</fullName>
        <label>Selected Picklist Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Selected_TextArea__c</fullName>
        <label>Selected TextArea</label>
        <type>TextArea</type>
    </fields>
    <label>Account Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BST_ACCPROFILE_QUESTION_LOCALE__c</columns>
        <columns>BST_ACCPROFILE_QUESTION_STATEMENT__c</columns>
        <columns>BST_Selected_Date__c</columns>
        <columns>BST_Selected_Multi_Answers__c</columns>
        <columns>BST_Selected_Number__c</columns>
        <columns>BST_Selected_Picklist_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Account Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>